kubeconfigs/50-glowing-bear.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: glowing-bear
  namespace: kube-weechat
spec:
  selector:
    matchLabels:
      app: glowing-bear
  replicas: 1
  template:
    metadata:
      labels:
        app: glowing-bear
    spec:
      containers:
      - name: nginx
        image: nginx:1.11-alpine
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: glowing-bear-src
          mountPath: /usr/share/nginx/html
      volumes:
      - name: glowing-bear-src
        gitRepo:
          repository: "https://github.com/glowing-bear/glowing-bear.git"
          revision: "92d707a51d92adcfc099e36ece8b711e1454f97f"
          directory: .
---
apiVersion: v1
kind: Service
metadata:
  name: glowing-bear
  namespace: kube-weechat
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: glowing-bear
